src/utils/sak/src/cmds/compile_post/tests/err-unclosed-tag/expected.stderr
[31merror:[0m unexpected end of file
   ╭─[input:4:8]
   │
 1 │ <note>
   │ ┬  
   │ ╰── ... when reading this element
   │ 
───╯

compilation failed
